--- a/src/lib/styles/app.css
+++ b/src/lib/styles/app.css
@@ -8,7 +8,7 @@
     font-family: 'Barlow', sans-serif;
     font-size: 18px;
     width: 100%;
-    background-color: theme(colors.backgroundColor);
+    background-color: theme(colors[backgroundColor]);
   }
   .no-scroll {
     overflow: hidden;
