--- a/src/lib/styles/app.css
+++ b/src/lib/styles/app.css
@@ -10,6 +10,16 @@
     width: 100%;
     background-color: theme(colors[backgroundColor]);
   }
+  @media screen and (max-width: 450px) {
+    body {
+      width: 150%;
+    }
+  }
+  @media screen and (min-width: 768px) and (max-width: 870px) {
+    body {
+      width: 115%;
+    }
+  }
   .no-scroll {
     overflow: hidden;
   }
